environment/k8s/dummy-test-app/overlays/prod/patch/ingress-patch.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-test-app-ingress
spec:
  rules:
    - host: dummy-test-app-prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dummy-test-app-service
                port:
                  number: 80
